# mydesk

./: .gitignore  README.md  desktop-mockup-light.html  desktop-mockup.html  latest.json  package-lock.json  package.json  preview.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  main.rs  performance.rs  tuner.rs  window_styler.rs
src/common/: style.css
src/dock/: index.html
src/settings/: index.html
src/wallpaper/: index.html
src/widgets/: index.html
